--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@
 * {
   margin: 0;
   padding: 0;
+  transition: all 0.4s;
 }
 
 /* box-sizing and font sizing */
@@ -84,116 +85,108 @@ a {
   font-weight: 600;
 }
 
-.global-div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-width: 350px;
-}
-
 .title-div {
   display: flex;
   justify-content: center;
   margin-top: 40px;
-  min-width: 350px;
+  min-width: 400px;
 }
-.cat-div {
-  text-align: center;
-  text-transform: capitalize;
-  min-width: 350px;
-}
-.progress-div {
-  margin: 5px auto;
-}
-.question-container {
-  padding: 20px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-.answer {
-  cursor: pointer;
-  padding: 5px;
-  margin: 5px;
-  border: 3px solid var(--main-transparent);
-}
-
-.answer:hover {
-  border: 3px solid var(--main-gray);
-}
-
-.answer-correct {
-  background-color: var(--main-gray);
-  color: var(--main-green);
-}
-
-.answer-wrong {
-  background-color: var(--main-gray);
-  color: var(--main-red);
-}
-
-.answer-status {
-  height: 5vh;
-}
-
-.loading {
-  text-align: center;
-  font-size: inherit;
-}
-
-.results-div {
+.global-div {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  padding: 20px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  justify-items: center;
+  min-width: 400px;
+  min-height: 70vh;
 }
 
-.results-sum {
-  margin: 10px 0;
+.search {
+  font-size: 2.2rem;
+  color: var(--main-gray);
+  border: none;
+  border: 2px solid var(--main-lightGray);
+  padding: 5px;
+  background: transparent;
+  outline: none;
 }
 
-.details-div {
-  margin: 0 10px;
-  margin-bottom: 10px;
+.search:focus {
+  background-color: var(--main-gray);
+  color: var(--main-white);
+  border: 2px solid var(--main-gray);
+  outline: none;
+}
+
+.error-container {
   display: flex;
   flex-direction: column;
-  align-items: left;
-  padding: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  justify-content: center;
+  text-align: center;
+  color: var(--main-red);
+  height: 30px;
 }
 
 button {
-  font-weight: 600;
+  width: 40px;
+  margin: 0 5px;
   padding: 5px;
-  background-color: var(--main-dark);
-  color: var(--main-white);
-  width: 200px;
-  margin: 5px 0;
-  font-size: 1.8rem;
   cursor: pointer;
+  border: 2px solid var(--main-lightGray);
 }
-button:active {
-  background-color: var(--main-white);
-  color: var(--main-dark);
+button:hover,
+button:focus {
+  background-color: var(--main-gray);
+  color: var(--main-white);
+  border: 2px solid var(--main-gray);
+  outline: none;
+}
+button:disabled {
+  cursor: not-allowed;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-width: 350px;
+.pages-cmd {
+  margin-bottom: 20px;
+  color: var(--main-gray);
 }
-label {
-  width: 300px;
+
+.hits {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-content: center;
+  gap: 25px;
+  padding-left: 80px;
 }
-input,
-select {
-  width: 300px;
-  margin-bottom: 5px;
-  height: 30px;
-  font-weight: 700;
-  font-size: inherit;
-  padding: 0 5px;
+.hit {
+  font-size: 1.6rem;
+  padding: 0 10px;
+}
+.date-info {
+  color: var(--main-gray);
+  font-size: 1.2rem;
+}
+.title {
+}
+.more {
+  color: var(--main-lightGray);
+  font-size: 1.2rem;
+}
+.remove {
+  color: var(--main-red);
+  margin-left: 10px;
+  font-size: 1.2rem;
   cursor: pointer;
+}
+
+@media (max-width: 980px) {
+  .hits {
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
+    padding-left: 60px;
+  }
+}
+
+@media (max-width: 400px) {
+  .hits {
+    padding-left: 40px;
+  }
 }
